Fixed the z-index for the small menu

--- a/css/scss/partials/_header.scss
+++ b/css/scss/partials/_header.scss
@@ -84,6 +84,10 @@
   background-color: $brand-color-dark;
   position: absolute;
   display: none;
+  z-index: 2;
+  @media screen and (min-width: $break-s) {
+    z-index: 0;
+  }
   @media only screen and (min-width: $break-m) {
     display: none;
   }
